# test

./: Cargo.toml  README.md  build.rs  license.txt  test.go
c/: .mxproject  Makefile  STM32F429ZITx_FLASH.ld  c.ioc  stm32f429_4.ioc
c/Inc/: main.h
c/Src/: main.c  stm32f4xx_it.c
src/: main.rs
