[package]
authors = ["guenther stangassinger <guenther.stangassinger@gmx.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "test"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "test"
repository = "https://github.com/stangassinger/test"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"
stm32f429i-disc = "0.1.2"
nb = "0.1.1"
arraydeque = { version = "0.4", default-features = false }
btoi = { version = "0.4.0", default-features = false }



[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
version = "0.2.8"

[dev-dependencies]
nb = "0.1.1"
panic-halt = "0.2.0"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
